--- a/gae/templates/index.html
+++ b/gae/templates/index.html
@@ -25,6 +25,13 @@
         width: 100%;
         text-align: center;
     }
+
+    #subscribe {
+        text-align: left;
+        width: 30%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     </style>
 </head>
 
@@ -39,6 +46,44 @@
         <p>Last retrieved Id: {{ last_retrieved_id | add_thousands_separator }}</p>
         <p>Max known Id: {{ max_item_id | add_thousands_separator }}</p>
         <p>Inaccesible: {{ inaccessible_entries | add_thousands_separator }}</p>
+
+        <div id="subscribe">
+            <!-- Begin MailChimp Signup Form -->
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+                /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style>
+            <div id="mc_embed_signup">
+            <form action="//it-events.us6.list-manage.com/subscribe/post?u=3b96ab0d83efea9ecdb39646c&amp;id=768b1c2a69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                <h2>Subscribe to get notified about further activity related to "Grey Panther's Hacker News Archiver"</h2>
+                <p>(for example analysis of the crawled data, updated archives, crawl data available for other websites, etc)</p>
+            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <div class="mc-field-group">
+                <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+            </label>
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+            <div class="mc-field-group input-group">
+                <strong>Email Format </strong>
+                <ul><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">html</label></li>
+            <li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">text</label></li>
+            </ul>
+            </div>
+                <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_3b96ab0d83efea9ecdb39646c_768b1c2a69" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+            </form>
+            </div>
+            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            <!--End mc_embed_signup-->
+        </div>
     </div>
 </div>
 
