Update link to latest dump

--- a/gae/templates/index.html
+++ b/gae/templates/index.html
@@ -48,11 +48,8 @@
         <p>Inaccesible: {{ inaccessible_entries | add_thousands_separator }}</p>
 
         <div class="left-align">
-            <p>You can download the first 10,002,378 stories / comments using <a href="static/10m_hn_comments_sorted.torrent">this torrent</a>
-            (or <a href="magnet:?xt=urn:btih:44c65b5779d9d8021e002584fa73740f36d052a6&dn=10m_hn_comments_sorted">this magnet link</a>).
+	    <p>You can download the first 14,566,367 stories / comments from <a href="https://archive.org/details/14566367HackerNewsCommentsAndStoriesArchivedByGreyPanthersHacker">archive.org</a>.
             Subscribe below to get further updates for this project.</p>
-
-            <p><em>Update</em>: the archive has also been uploaded to <a href="https://archive.org/details/10mHnCommentsSorted.json">archive.org</a>.</p>
         </div>
         <div class="left-align">
             <!-- Begin MailChimp Signup Form -->
